syntax = "proto3";
package pb;

import "vendor/github.com/gogo/protobuf/gogoproto/gogo.proto";

option go_package                           = "pb";
option (gogoproto.goproto_unrecognized_all) = false;
option (gogoproto.goproto_unkeyed_all)      = false;
option (gogoproto.goproto_sizecache_all)    = false;

message SayHelloReq {
    string text = 1;
}

message SayHelloResp {
    string text = 1;
}